# VectorGestureLab

./: .gitignore  CMakeLists.txt  README.md  gesture_piano.py  gesture_server.py  run_vector_lab.sh
VectorGestureLab.app/Contents/: Info.plist
VectorGestureLab.app/Contents/MacOS/: launch.sh
include/: MyVector.h
src/: main.cpp
